--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tinta Neón - Artista de Tatuajes Futurista</title>
+    <title>Gray Clouds Tattoo</title>
     <meta name="description" content="Transforming skin into digital art with cutting-edge futuristic tattoo designs. Cyberpunk, geometric, and innovative body art." />
     <meta name="author" content="Neon Ink Studio" />
 
-    <meta property="og:title" content="Tinta Neón - Artista de Tatuajes Futurista" />
+    <meta property="og:title" content="Gray Clouds Tattoo" />
     <meta property="og:description" content="Transforming skin into digital art with cutting-edge futuristic tattoo designs. Cyberpunk, geometric, and innovative body art." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
@@ -19,7 +19,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Exo+2:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/png" href="/ico.png" />
+    <link rel="icon" type="image/png" href="/contact/ico.png" />
   </head>
 
   <body>
